manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assignment-service
  namespace: it-assignment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assignment-service
  template:
    metadata:
      labels:
        app: assignment-service
    spec:
      containers:
        - name: assignment-service
          image: devacr231225.azurecr.io/assignment-service:v1
          ports:
            - containerPort: 8080
