manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: assignment-service
  namespace: it-assignment
spec:
  selector:
    app: assignment-service
  ports:
    - port: 80
      targetPort: 8080
